# test-usd-data-extractor

./: .gitignore  .gitmodules  Cargo.toml  pig.usda
test-usd/: SphereA.usd  SphereB.usd  hip.usd  monkey.usda  pig.usd  test.usd  test.usda
test-usd/monkey/: PBR - Metallic Roughness Alpha-test.geo.usd  PBR - Metallic Roughness Alpha-test.material.usda  PBR - Metallic Roughness Alpha-test.usd
usd_data_extractor/: Cargo.toml  build.rs
usd_data_extractor/cpp/: bridgeSender.h  camera.cpp  camera.h  cameraObserver.cpp  cameraObserver.h  distantLight.cpp  distantLight.h  distantLightObserver.cpp  distantLightObserver.h  materialObserver.cpp  materialObserver.h  mesh.cpp  mesh.h  meshObserver.cpp  meshObserver.h  renderDeleagte.cpp  renderDelegate.h  renderProduct.cpp  renderProduct.h  renderSettings.cpp  renderSettings.h  renderSettingsObserver.cpp  renderSettingsObserver.h  sceneIndexObserver.cpp  sceneIndexObserver.h  sphereLight.cpp  sphereLight.h  sphereLightObserver.cpp  sphereLightObserver.h  syncTask.cpp  syncTask.h  usdDataDiff.h  usdDataExtractor.cpp  usdDataExtractor.h
usd_data_extractor/include/: include.h
usd_data_extractor/src/: bridge.rs  lib.rs
usd_view/: Cargo.toml
usd_view/src/: egui_renderer.rs  main.rs  render_scene.rs  renderer.rs  scene.rs  scene_loader.rs  shader.wgsl  state.rs
