[package]
name = "usd_data_extractor"
edition.workspace = true
version.workspace = true

build = "build.rs"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
cxx = "1.0.121"
glam = { version = "0.27.0", features = ["bytemuck"] }
oneshot = "0.1.6"

[build-dependencies]
cxx-build = "1.0.121"
glob = "0.3.1"
vcvars = "0.1.6"
which = "6.0.1"
